# nyaya-ai

./: .gitignore  AGENTS.md  Dockerfile  README.md  SESSION_1_PROMPT.md  architecture.md  check_scans.py  cleanup_reports.py  codebase_audit.md  colab_reingest.py  datacheck.py  debug_ica27.txt  debug_output.txt  debug_output_top20.txt  docker-compose.yml  gitignore  ingest.py  ingest_custom.py  ingest_precedents.py  ingest_precedents_colab.py  initial-design-doc.md  local_run_guide.md  nyaya_history.db  nyaya_history.db-shm  nyaya_history.db-wal  problem-statement.md  pyproject.toml  query.py  requirements.txt  run.sh  scan_contract.py
data/: Layer1-IndianLaw.txt
design-templates/: NyayaAI-Dark-Contract.html  NyayaAI-Dashboard.html  NyayaAI-LandingPage.html  NyayaAI-Light-Contract.html  NyayaAI-RAGChat.html  NyayaAI-SignInPage.html
docs/: accuracy_and_evaluation.md  architecture.md  initial-design-doc.md  mock_interview.md  presence_artifact.md  problem-statement.md  resume_bullets.md  thinking_artifact.md
embedding-space/: Dockerfile  README.md  app.py  requirements.txt
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
initial-docs/: 01_Workflow_Guide.md  02_Technical_Problem_Compendium.md  03_Deliverables_Specification.md
new_laws/: dpdp_act.json  jan_vishwas_act.json  mediation_act.json  telecommunications_act.json
nyaya_ai/: __init__.py  config.py  schemas.py
nyaya_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reranker-space/: Dockerfile  README.md  app.py  requirements.txt
scratch/: update_architecture.py
(+86 files in other folders)
