[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyaya-ai"
version = "0.1.0"
description = "Indian Legal Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "datasets>=2.14.0",
    "pymupdf>=1.23.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["nyaya_ai*"]
